# markdown_scanner

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs  version.rs
tests/: empty_scan_test.rs  single_token_test.rs
tests/helper/: mod.rs
